refactoring GameList and block of articles on main

--- a/html/GamesList.html
+++ b/html/GamesList.html
@@ -63,69 +63,93 @@
     </div>
 </section>
 
+
 <section>
     <div class="container">
-
-        <div class="list_games">
-            <div class="games">
-                <div class="image-games">
-                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+        <div class="list-games">
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne-Calc-iOS.html"><img src="../img/GamesOne/Calc-on-iPhone-JS.svg" alt=""></a>
                 </div>
-                <div class="title-games">
+                <div class="games-card-title">
+                    <a href="GamesOne/GameOne-Calc-iOS.html">Название игры</a>
+                </div>
+            </div>
+
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne-TicTacToe.html"><img src="../img/GamesOne/TicTacToe.svg" alt=""></a>
+                </div>
+                <div class="games-card-title">
+                    <a href="GamesOne/GameOne-TicTacToe.html">Название игры</a>
+                </div>
+            </div>
+
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne.html"><img src="../img/GamesOne/article3.png" alt=""></a>
+                </div>
+                <div class="games-card-title">
                     <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
-            <div class="games">
-                <div class="image-games">
-                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne.html"><img src="../img/GamesOne/article3.png" alt=""></a>
                 </div>
-                <div class="title-games">
+                <div class="games-card-title">
                     <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
-            <div class="games">
-                <div class="image-games">
-                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-games">
-                    <a href="GamesOne/GameOne.html">Название игры</a>
-                </div>
-            </div>
         </div>
-        <div class="list_games">
-            <div class="games">
-                <div class="image-games">
-                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+
+
+        <div class="list-games">
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne.html"><img src="../img/GamesOne/article3.png" alt=""></a>
                 </div>
-                <div class="title-games">
+                <div class="games-card-title">
                     <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
-            <div class="games">
-                <div class="image-games">
-                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne.html"><img src="../img/GamesOne/article3.png" alt=""></a>
                 </div>
-                <div class="title-games">
+                <div class="games-card-title">
                     <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
-            <div class="games">
-                <div class="image-games">
-                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne.html"><img src="../img/GamesOne/article3.png" alt=""></a>
                 </div>
-                <div class="title-games">
+                <div class="games-card-title">
                     <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
+
+            <div class="games-card">
+                <div class="games-card-img">
+                    <a href="GamesOne/GameOne.html"><img src="../img/GamesOne/article3.png" alt=""></a>
+                </div>
+                <div class="games-card-title">
+                    <a href="GamesOne/GameOne.html">Название игры</a>
+                </div>
+            </div>
+
         </div>
+
     </div>
 </section>
 
-<section>
+
+
     <div class="container">
         <div class="advertisement-wrapper">
             <div class="advertisement">
@@ -175,7 +199,6 @@
                     <p>
                         Исходный код доступен на GitHub.
                     </p>
-                    <a href="#">ссылка</a>
                 </div>
                 <div class="tabs-content__right">
                     <img src="../img/GamesOne/GitHub.png" alt="">
