--- a/html/GamesOne/GameOne-Calc-iOS.html
+++ b/html/GamesOne/GameOne-Calc-iOS.html
@@ -56,7 +56,7 @@
             <div class="breadcrumbs__inner">
                 <div class="breadcrumbs__list">
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../GamesPages.html">Games Pages</a></li>
+                    <li><a href="../GamesList.html">Games Pages</a></li>
                     <li><span>Калькулятор как в iPhone</span></li>
                 </div>
             </div>
@@ -65,7 +65,7 @@
         <div class="Game_inner">
             <div class="Game">
                 <div class="img-inner">
-                    <div class="Game_img">
+                    <div class="image-games-one">
                         <img src="../../img/GamesOne/Calc-on-iPhone-JS.svg" alt="">
                     </div>
                 </div>
@@ -126,7 +126,6 @@
                     <p>
                         Исходный код доступен на GitHub.
                     </p>
-                    <a href="#">ссылка</a>
                 </div>
                 <div class="tabs-content__right">
                     <img src="../../img/GamesOne/GitHub.png" alt="">
