--- a/index.html
+++ b/index.html
@@ -72,73 +72,11 @@
 
 <section>
     <div class="container">
-        <h3 class="title-main-middle">Персональный подбор статей</h3>
+        
     </div>
 </section>
 
-<!--вёрстка блока статей-->
 
-<section>
-    <div class="container">
-
-        <div class="list_article">
-            <div class="article">
-                <div class="image-article">
-                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-article">
-                    <a href="html/article.html">Название статьи</a>
-                </div>
-            </div>
-
-            <div class="article">
-                <div class="image-article">
-                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-article">
-                    <a href="html/article.html">Название статьи</a>
-                </div>
-            </div>
-
-            <div class="article">
-                <div class="image-article">
-                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-article">
-                    <a href="html/article.html">Название статьи</a>
-                </div>
-            </div>
-        </div>
-        <div class="list_article">
-            <div class="article">
-                <div class="image-article">
-                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-article">
-                    <a href="html/article.html">Название статьи</a>
-                </div>
-            </div>
-
-            <div class="article">
-                <div class="image-article">
-                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-article">
-                    <a href="html/article.html">Название статьи</a>
-                </div>
-            </div>
-
-            <div class="article">
-                <div class="image-article">
-                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
-                </div>
-                <div class="title-article">
-                    <a href="html/article.html">Название статьи</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!--вёрстка блока онлайн казино-->
 <section class="slider">
@@ -216,7 +154,7 @@
 
 
                 <div class="product__item mix category-logical" data-order="3">
-                    <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html" style="background-image: url(img/GamesOne/TicTacToe.svg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html" style="background-image: url(img/GamesOne/TicTacToe.svg); background-size:contain"></a>
                 </div>
 
 
@@ -248,6 +186,71 @@
             <div class="advertisement">
                 <div class="advertisement-text">
                     Здесь могла быть ваша реклама
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--вёрстка блока статей-->
+
+<section>
+    <div class="container">
+        <h3 class="title-main-middle">Персональный подбор статей</h3>
+
+        <div class="list_article">
+            <div class="article">
+                <div class="image-article">
+                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
+                </div>
+                <div class="title-article">
+                    <a href="html/article.html">Название статьи</a>
+                </div>
+            </div>
+
+            <div class="article">
+                <div class="image-article">
+                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
+                </div>
+                <div class="title-article">
+                    <a href="html/article.html">Название статьи</a>
+                </div>
+            </div>
+
+            <div class="article">
+                <div class="image-article">
+                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
+                </div>
+                <div class="title-article">
+                    <a href="html/article.html">Название статьи</a>
+                </div>
+            </div>
+        </div>
+        <div class="list_article">
+            <div class="article">
+                <div class="image-article">
+                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
+                </div>
+                <div class="title-article">
+                    <a href="html/article.html">Название статьи</a>
+                </div>
+            </div>
+
+            <div class="article">
+                <div class="image-article">
+                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
+                </div>
+                <div class="title-article">
+                    <a href="html/article.html">Название статьи</a>
+                </div>
+            </div>
+
+            <div class="article">
+                <div class="image-article">
+                    <a href="html/article.html"><img src="img/main/article3.png" alt=""></a>
+                </div>
+                <div class="title-article">
+                    <a href="html/article.html">Название статьи</a>
                 </div>
             </div>
         </div>
