--- a/html/GamesOne/GameOne-TicTacToe.html
+++ b/html/GamesOne/GameOne-TicTacToe.html
@@ -101,7 +101,7 @@
                     <p>
                         Данное приложение разработано на JavaScript и представляет собой калькулятор как в Apple iPhone.
                     </p>
-                    <a href="#">Демонстрация</a>
+                    <button class="button-For-Like"></button>
                 </div>
                 <div class="tabs-content__right-calc">
                     <img src="../../img/GamesOne/article3.png" alt="">
@@ -305,14 +305,20 @@
     </div>
 </div>
 
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
 <script src="../../js/jquery.maskedinput.min.js"></script>
 <script src="../../js/mask.js"></script>
+<script src="../../js/GameOne/like-button.js"></script>
 <script src="../../js/GameOne/script.js"></script>
 
 </body>
+
+
+
 
 <script>
     var content1 = document.getElementById("content1");
