--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
     </div>
 </section>
 
+<!-- ПОПАП ВХОДА -->
 <div  style="display: none;" id="modal">
     <div class="login-wrapper">
         <div class="login-title">
@@ -533,7 +534,7 @@
     </div>
 </div>
 
-
+<!-- ПОПАП РЕГИСТРАЦИИ -->
 <div style="display: none;" id="animatedModal" class="animated-modal">
     <h2>Регистрация</h2>
     <div class="login-wrapper">
@@ -560,9 +561,12 @@
     </div>
 </div>
 
+<!-- КНОПОЧКА "ВВЕРХ" -->
 <a href="#up" class="pageup">
     <img src="icons/up.svg" alt="" class="pageup">
 </a>
+
+<!-- СКРИПТЫ -->
 
 <script src="js/up.js"></script>
 
