--- a/html/404.html
+++ b/html/404.html
@@ -20,7 +20,7 @@
         <div class="container">
             <header class="header-inner">
                 <div class="header-button">
-                    <a href="../index.html"><img src="../img/Global/logo-new.png" alt=""></a>
+                    <a href="../index.html"><img src="../img/Global/NewLogo.png" alt=""></a>
                 </div>
     
                 <div class="buttons-enters">
@@ -155,7 +155,7 @@
             <div class="footer2-logo">
                 <div class="footer-logo-img">
                     <div class="footer-logo-prototip">
-                        <img src="../img/Global/logo-new.png" alt="">
+                        <img src="../img/Global/NewLogo.png" alt="">
                     </div>
 
                     <div class="footer2-logo-text">
