--- a/index.html
+++ b/index.html
@@ -70,15 +70,7 @@
 </section>
 
 
-<section>
-    <div class="container">
-        
-    </div>
-</section>
-
-
-
-<!--вёрстка блока онлайн казино-->
+<!--ВЁРСТКА БЛОКА ИГРОМАНИИ-->
 <section class="slider">
     <div class="container">
         <div class="slider__inner">
@@ -127,7 +119,7 @@
     </div>
 </section>
 
-<!--вёрстка блока с играми-->
+<!--ВЁРСТКА БЛОКА С ИГРАМИ-->
 <section class="games">
     <div class="container">
         <h3 class="title-main-middle">Играй и выигрывай</h3>
@@ -192,7 +184,7 @@
     </div>
 </section>
 
-<!--вёрстка блока статей-->
+<!--ВЁРСТКА БЛОКА СТАТЕЙ-->
 
 <section>
     <div class="container">
