add depositCalc (rangeTime) and refactoring

--- a/html/GamesList.html
+++ b/html/GamesList.html
@@ -72,7 +72,7 @@
                     <a href="GamesOne/GameOne-Calc-iOS.html"><img src="../img/GamesOne/Calc-on-iPhone-JS.svg" alt=""></a>
                 </div>
                 <div class="games-card-title">
-                    <a href="GamesOne/GameOne-Calc-iOS.html">Название игры</a>
+                    <a href="GamesOne/GameOne-Calc-iOS.html">Калькулятор как в iPhone</a>
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
                     <a href="GamesOne/GameOne-TicTacToe.html"><img src="../img/GamesOne/TicTacToe.svg" alt=""></a>
                 </div>
                 <div class="games-card-title">
-                    <a href="GamesOne/GameOne-TicTacToe.html">Название игры</a>
+                    <a href="GamesOne/GameOne-TicTacToe.html">Крестики-нолики</a>
                 </div>
             </div>
 
