--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="products__inner-box">
                 <div class="product__item mix category-arcade" data-order="1">
                     <div class="product__item-inner">
-                        <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                        <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article3.png)"></a>
                     </div>
                 </div>
 
@@ -151,16 +151,16 @@
 
 
                 <div class="product__item mix category-desk" data-order="4">
-                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article3.png)"></a>
                 </div>
 
 
                 <div class="product__item mix category-logical" data-order="5">
-                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article3.png)"></a>
                 </div>
 
                 <div class="product__item mix category-logical" data-order="6">
-                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article3.png)"></a>
                 </div>
 
 
@@ -385,6 +385,27 @@
     </div>
 </section>
 
+<section>
+    <div class="container">
+        <h3>
+            <h3 class="title-main-middle">Депозитный калькулятор</h3>
+        </h3>
+        <div class="deposit-form-wrapper">
+            <div class="deposit-min-time">
+                <input type="range" min="0" max="365" step="1">
+                <div class="deposit-time-bar">
+                    <span class="min"></span>
+                    <span class="max"></span>
+                </div>
+                <div class="deposit-track">
+                    <div class="deposit-time-value"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 
 
 <!--ВЁРСТКА ФУТЕРА-->
@@ -573,6 +594,7 @@
 <script src="js/mask.js"></script>
 <script src="js/main/script.js"></script>
 <script src="js/main/review.js"></script>
+<script src="js/DepositCalc/DepositTime.js"></script>
 
 </body>
 
