add layout DepositCalc and refactoring

--- a/html/GamesOne/GameOne.html
+++ b/html/GamesOne/GameOne.html
@@ -263,10 +263,10 @@
         </div>
         <form class="form-enter">
             <label class="login-label-name">
-                <input type="text" placeholder="UserName" required>
+                <input type="text" placeholder="UserName" required maxlength="10">
             </label>
             <label class="login-label-pass">
-                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Password" required maxlength="20">
             </label>
             <button class="popap-button" type="submit">
                 <div class="popap-button-enter">
@@ -282,16 +282,16 @@
     <div class="login-wrapper">
         <form class="form-enter">
             <label class="login-label-name">
-                <input type="text" placeholder="UserName" required>
+                <input type="text" placeholder="UserName" required maxlength="10">
             </label>
             <label class="login-label-email">
-                <input type="email" placeholder="Email" required>
+                <input type="email" placeholder="Email" required maxlength="20">
             </label>
             <label class="login-label-phone">
                 <input name="phone" placeholder="Your phone" required>
             </label>
             <label class="login-label-pass">
-                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Password" required maxlength="20">
             </label>
 
             <button class="popap-button2" type="submit">
