--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -8,8 +8,8 @@
     <title>SOS</title>
 </head>
 <body>
-    <section>
-        
+    <section class="SectionOne" style="background-image: url(../../figma/SOS/img/bg-image-1.jpg); background-size:contain">
+
     </section>
 </body>
 </html>
