--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -8,8 +8,68 @@
     <title>SOS</title>
 </head>
 <body>
-    <section class="SectionOne" style="background-image: url(../../figma/SOS/img/bg-image-1.jpg); background-size:contain">
+    <section class="SectionOne" style="background-image: url(../../figma/SOS/img/bg-image-1.jpg); background-size:cover">
+       <div class="container1">
+        <header>
+            <div class="header-inner">
+                <div class="logo">
+                    <img src="img/logo.png" alt="">
+                </div>
+                <div class="menu-inner">
+                    <div class="submenu">
+                        <div class="submenu-main">
+                            main
+                        </div>
+                        <div class="submenu-main">
+                            about
+                        </div>
+                        <div class="submenu-main">
+                            game-features
+                        </div>
+                        <div class="submenu-main">
+                            system requirements
+                        </div>
+                        <div class="submenu-main">
+                            quotes
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <div class="language">
+                            
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </header>
+
+        <div class="title-wrapper">
+            <div class="Main-title">
+                survive at all costs
+            </div>
+            <div class="sub-title">
+                experrience new social battle royale game
+            </div>
+            <div class="button-yellow">
+                <div class="button-yellow-left">
+                    Buy now on Steam
+                </div>
+                <div class="button-yellow-right">
+                   $14.99
+                </div>
+            </div>
+        </div>
+        
+
+        <div class="the-story">
+            <div class="the-story-text">
+                the story
+            </div>
+            <div class="the-story-img">
+                <img src="img/scroll down.svg" alt="">
+            </div>
+        </div>
+       </div>
     </section>
 </body>
 </html>
