--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link rel="stylesheet" href="../../css/style.css">
     <title>SOS</title>
 </head>
@@ -16,27 +19,34 @@
                     <img src="img/logo.png" alt="">
                 </div>
                 <div class="menu-inner">
-                    <div class="submenu">
-                        <div class="submenu-main">
-                            main
-                        </div>
-                        <div class="submenu-main">
-                            about
-                        </div>
-                        <div class="submenu-main">
-                            game-features
-                        </div>
-                        <div class="submenu-main">
-                            system requirements
-                        </div>
-                        <div class="submenu-main">
-                            quotes
-                        </div>
+                    <div class="submenu-main">
+                        main
                     </div>
-                    <div class="buttons">
-                        <div class="language">
-                            
-                        </div>
+                    <div class="submenu-main">
+                        about
+                    </div>
+                    <div class="submenu-main">
+                        game features
+                    </div>
+                    <div class="submenu-main">
+                        system requirements
+                    </div>
+                    <div class="submenu-main">
+                        quotes
+                    </div>
+                </div>
+                <div class="buttons">
+                    <div class="language">
+                        eng
+                    </div>
+                    <div class="separator">
+                        <img src="img/separator1.svg" alt="">
+                    </div>
+                    <div class="logo-Xbox">
+                        <img src="img/xbox-icon.svg" alt="">
+                    </div>
+                    <div class="logo-steam">
+                        <img src="img/steam-icon.svg" alt="">
                     </div>
                 </div>
 
@@ -53,6 +63,9 @@
             <div class="button-yellow">
                 <div class="button-yellow-left">
                     Buy now on Steam
+                </div>
+                <div class="button-yellow-center">
+                    <img src="img/separator2.svg" alt="">
                 </div>
                 <div class="button-yellow-right">
                    $14.99
