add background sections

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -82,5 +82,33 @@
         </div>
        </div>
     </section>
+
+
+    <!-- вёрстка второго блока -->
+    <section class="SectionTwo" style="background-image: url(../../figma/SOS/img/bg-image-2.jpg); background-size:cover">
+        <div class="h1up">
+            what is sos?
+        </div>
+        <div class="h1Main">
+            <div class="h1Main-text">
+                social battle royale game
+            </div>
+        </div>
+    </section>
+
+
+    <section class="SectionThree" style="background-image: url(../../figma/SOS/img/Group.jpg); background-size:cover">
+
+    </section>
+
+
+    <section class="SectionFour" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
+
+    </section>
+
+    <section class="SectionFive" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
+
+    </section>
+
 </body>
 </html>
