--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -96,16 +96,17 @@
         </div>
     </section>
 
-
+    <!-- вёрстка третьего блока -->
     <section class="SectionThree" style="background-image: url(../../figma/SOS/img/Group.jpg); background-size:cover">
 
     </section>
 
-
+<!-- вёрстка четвёртого блока -->
     <section class="SectionFour" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
 
     </section>
 
+<!--     вёрстка пятого блока -->
     <section class="SectionFive" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
 
     </section>
