--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,84 +9,87 @@
     <link rel="stylesheet" href="../../css/style.css">
     <title>SOS</title>
 </head>
+
 <body>
-    <section class="SectionOne" style="background-image: url(../../figma/SOS/img/bg-image-1.jpg); background-size:cover">
-       <div class="container1">
-        <header>
-            <div class="header-inner">
-                <div class="logo">
-                    <img src="img/logo.png" alt="">
-                </div>
-                <div class="menu-inner">
-                    <div class="submenu-main">
-                        main
+    <section class="SectionOne"
+        style="background-image: url(../../figma/SOS/img/bg-image-1.jpg); background-size:cover">
+        <div class="container1">
+            <header>
+                <div class="header-inner">
+                    <div class="logo">
+                        <img src="img/logo.png" alt="">
                     </div>
-                    <div class="submenu-main">
-                        about
+                    <div class="menu-inner">
+                        <div class="submenu-main">
+                            main
+                        </div>
+                        <div class="submenu-main">
+                            about
+                        </div>
+                        <div class="submenu-main">
+                            game features
+                        </div>
+                        <div class="submenu-main">
+                            system requirements
+                        </div>
+                        <div class="submenu-main">
+                            quotes
+                        </div>
                     </div>
-                    <div class="submenu-main">
-                        game features
+                    <div class="buttons">
+                        <div class="language">
+                            eng
+                        </div>
+                        <div class="separator">
+                            <img src="img/separator1.svg" alt="">
+                        </div>
+                        <div class="logo-Xbox">
+                            <img src="img/xbox-icon.svg" alt="">
+                        </div>
+                        <div class="logo-steam">
+                            <img src="img/steam-icon.svg" alt="">
+                        </div>
                     </div>
-                    <div class="submenu-main">
-                        system requirements
-                    </div>
-                    <div class="submenu-main">
-                        quotes
-                    </div>
-                </div>
-                <div class="buttons">
-                    <div class="language">
-                        eng
-                    </div>
-                    <div class="separator">
-                        <img src="img/separator1.svg" alt="">
-                    </div>
-                    <div class="logo-Xbox">
-                        <img src="img/xbox-icon.svg" alt="">
-                    </div>
-                    <div class="logo-steam">
-                        <img src="img/steam-icon.svg" alt="">
-                    </div>
-                </div>
 
-            </div>
-        </header>
+                </div>
+            </header>
 
-        <div class="title-wrapper">
-            <div class="Main-title">
-                survive at all costs
-            </div>
-            <div class="sub-title">
-                experrience new social battle royale game
-            </div>
-            <div class="button-yellow">
-                <div class="button-yellow-left">
-                    Buy now on Steam
+            <div class="title-wrapper">
+                <div class="Main-title">
+                    survive at all costs
                 </div>
-                <div class="button-yellow-center">
-                    <img src="img/separator2.svg" alt="">
+                <div class="sub-title">
+                    experrience new social battle royale game
                 </div>
-                <div class="button-yellow-right">
-                   $14.99
+                <div class="button-yellow">
+                    <div class="button-yellow-left">
+                        Buy now on Steam
+                    </div>
+                    <div class="button-yellow-center">
+                        <img src="img/separator2.svg" alt="">
+                    </div>
+                    <div class="button-yellow-right">
+                        $14.99
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="the-story">
+                <div class="the-story-text">
+                    the story
+                </div>
+                <div class="the-story-img">
+                    <img src="img/scroll down.svg" alt="">
                 </div>
             </div>
         </div>
-        
-
-        <div class="the-story">
-            <div class="the-story-text">
-                the story
-            </div>
-            <div class="the-story-img">
-                <img src="img/scroll down.svg" alt="">
-            </div>
-        </div>
-       </div>
     </section>
 
 
     <!-- вёрстка второго блока -->
-    <section class="SectionTwo" style="background-image: url(../../figma/SOS/img/bg-image-2.jpg); background-size:cover">
+    <section class="SectionTwo"
+        style="background-image: url(../../figma/SOS/img/bg-image-2.jpg); background-size:cover">
         <div class="h1up">
             what is sos?
         </div>
@@ -94,22 +98,79 @@
                 social battle royale game
             </div>
         </div>
+        <div class="textSectionTwo">
+            <div class="textSectionTwo-text">
+                Each round, <strong>you</strong> and <strong>15</strong> other contestants compete to escape a deadly
+                island filled with
+                monsters. The
+                trick is: <strong>three</strong> people can survive. Will you run solo or form friendships with others
+                to escape?
+                <br> <br>
+
+                Making the right decisions could be the difference between life and death.
+
+            </div>
+        </div>
     </section>
 
     <!-- вёрстка третьего блока -->
     <section class="SectionThree" style="background-image: url(../../figma/SOS/img/Group.jpg); background-size:cover">
+        <div class="S3-h1up">
+            <div class="S3-h1up-text">
+                What’s so special?
+            </div>
+        </div>
+        <div class="S3-h1main">
+            <div class="S3-h1main-text">
+                features
+            </div>
+        </div>
+
+
 
     </section>
 
-<!-- вёрстка четвёртого блока -->
+    <!-- вёрстка четвёртого блока -->
     <section class="SectionFour" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
+        <div class="s4-h1up">
+            <div class="s4-h1up-text">
+                Can My Computer Run this game?
+            </div>
+        </div>
+        <div class="s4-h1main">
+            <div class="s4-h1main-text">
+                system requirements
+            </div>
+        </div>
+
+        <div class="table-os">
+            <div class="table-os-os">
+                os:
+            </div>
+            <div class="table-os-text">
+                Windows 7 64-bit only
+                <br>
+                (No OSX support at this time)
+            </div>
+        </div>
+        <div class="table-os-processor">
+            <div class="table-os-os">
+                os:
+            </div>
+            <div class="table-os-text">
+                Windows 7 64-bit only
+                <br>
+                (No OSX support at this time)
+            </div>
+        </div>
 
     </section>
 
-<!--     вёрстка пятого блока -->
+    <!--     вёрстка пятого блока -->
     <section class="SectionFive" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
 
     </section>
 
 </body>
+
 </html>
