--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -167,7 +167,26 @@
     </section>
 
     <!--     вёрстка пятого блока -->
-    <section class="SectionFive" style="background-image: url(../../figma/SOS/img/Group2.jpg); background-size:cover">
+    <section class="SectionFive"
+        style="background-image: url(../../figma/SOS/img/img-section-five.jpg); background-size:cover">
+        <div class="s5h1-up">
+            What people think?
+        </div>
+        <div class="s5h1-main">
+            Press quotes
+        </div>
+        <div class="s5h1-text">
+            Our goal is to create a product and service that you’re satisfied with and use it every day. This is why
+            we’re constantly working on our services to make it better every day and really listen to what our users has
+            to say.
+        </div>
+
+    </section>
+
+    <!-- вёрстка шестого блока -->
+
+    <section class="SectionSix"
+        style="background-image: url(../../figma/SOS/img/img-section-six.jpg); background-size:cover">
 
     </section>
 
