--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -187,6 +187,43 @@
 
     <section class="SectionSix"
         style="background-image: url(../../figma/SOS/img/img-section-six.jpg); background-size:cover">
+        <div class="s6h1-up">
+            Want to stay in touch?
+        </div>
+        <div class="s6h1-main">
+            newsletter SUBSCRIBE
+        </div>
+        <div class="s6h1-text">
+            In order to start receiving our news, all you have to do is enter your email address. Everything else will
+            be taken care of by us. We will send you emails containing information about game. We don’t spam.
+        </div>
+
+        <div class="s6img-main">
+            <img src="../SOS/img/s6-main.png" alt="">
+        </div>
+
+        <div class="email">
+            <div class="email-text">
+                Your email address
+            </div>
+        </div>
+
+        <button class="button-subscribe">
+            <div class="button-subscribe-text">
+                Subscribe now
+            </div>
+        </button>
+
+        <footer>
+            <div class="footer-under">
+                <div class="rights-text">
+                    © 2018 Outpost Games, Inc. All Rights Reserved
+                </div>
+                <div class="under-menu">
+
+                </div>
+            </div>
+        </footer>
 
     </section>
 
