--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -181,6 +181,12 @@
             to say.
         </div>
 
+        <button class="Read-more">
+            <div class="Read-more-text">
+                Read more testimonials
+            </div>
+        </button>
+
     </section>
 
     <!-- вёрстка шестого блока -->
