--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -212,6 +212,10 @@
             <div class="email-text">
                 Your email address
             </div>
+
+            <div class="email-email">
+                <input type="email" class="field-email" placeholder="aliciliniavopir@gmail.com" required maxlength="15">
+            </div>
         </div>
 
         <button class="button-subscribe">
