--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -106,9 +106,7 @@
                 trick is: <strong>three</strong> people can survive. Will you run solo or form friendships with others
                 to escape?
                 <br> <br>
-
                 Making the right decisions could be the difference between life and death.
-
             </div>
         </div>
     </section>
@@ -186,6 +184,16 @@
                 Read more testimonials
             </div>
         </button>
+
+        <div class="evan reviews">
+            <div class="reviews-name">
+                Evan Lahti
+            </div>
+
+            <div class="reviews-date">
+                October 18, 2018
+            </div>
+        </div>
 
     </section>
 
